[package]
name = "blog"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
chrono = "0.4.38"
octocrab = "0.38.0"
once_cell = "1.19.0"
regex = "1.10.4"
serde = "1.0.198"
serde_json = "1.0.116"
tokio = { version = "1.38.2", features = ["full"] }
url-escape = "0.1.1"
wcloud = "0.1.0"
